--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "peerDependencies": {
     "react": "^0.14 || ^15.0"
   },
-  "homepage": "https://github.com/jossmac/react-scrolllock#readme"
+  "homepage": "https://github.com/jossmac/react-scrolllock#readme",
+  "dependencies": {
+    "prop-types": "^15.5.8"
+  }
 }
