--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "prepublish": "npm run build"
   },
   "jest": {
-    "setupFiles": ["./jest.js"]
+    "setupFiles": [
+      "<rootDir>/config/setupPolyfills.js"
+    ],
+    "setupTestFrameworkScriptFile": "<rootDir>/config/setupFramework.js"
   },
   "repository": {
     "type": "git",
@@ -42,6 +45,7 @@
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
     "prop-types": "^15.6.0",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-lorem-component": "^0.12.2"
