--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "lib/index.js",
   "files": ["lib"],
   "scripts": {
-    "build": "babel src -d lib",
     "test": "jest",
-    "prepublish": "npm run build"
+    "start": "webpack-dev-server --mode development",
+    "build": "babel src -d dist --copy-files",
+    "prepublishOnly": "npm run build",
+    "build:examples": "webpack --mode production",
+    "deploy:examples": "gh-pages -d examples/dist",
+    "publish:examples": "npm run build:examples && npm run deploy:examples"
   },
   "jest": {
-    "setupFiles": [
-      "<rootDir>/config/setupPolyfills.js"
-    ],
+    "setupFiles": ["<rootDir>/config/setupPolyfills.js"],
     "setupTestFrameworkScriptFile": "<rootDir>/config/setupFramework.js"
   },
   "repository": {
@@ -30,24 +32,31 @@
     "exenv": "^1.2.2"
   },
   "peer-dependencies": {
-    "react": "^15.0 || ^16.0"
+    "react": "^16.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme": "^3.2.0",
     "flow-bin": "^0.61.0",
-    "jest": "^21.2.1",
+    "gh-pages": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest-cli": "^21.2.1",
+    "jest": "^21.2.1",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-lorem-component": "^0.12.2"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-lorem-component": "^0.12.2",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
+    "webpack": "^4.5.0"
   }
 }
