--- a/package.json
+++ b/package.json
@@ -42,20 +42,22 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "enzyme-adapter-react-16": "^1.1.0",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "flow-bin": "^0.61.0",
     "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest-cli": "^21.2.1",
     "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lorem-component": "^0.12.2",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
-    "webpack": "^4.5.0"
+    "webpack-dev-server": "^3.1.3"
   }
 }
