replace prop toggle

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "publish:examples": "npm run build:examples && npm run deploy:examples"
   },
   "jest": {
-    "setupFiles": ["<rootDir>/config/setupPolyfills.js"],
+    "setupFiles": [
+      "<rootDir>/config/setupPolyfills.js"
+    ],
     "setupTestFrameworkScriptFile": "<rootDir>/config/setupFramework.js"
   },
   "repository": {
@@ -26,9 +28,15 @@
     "url": "https://github.com/jossmac/react-scrolllock/issues"
   },
   "homepage": "https://github.com/jossmac/react-scrolllock#readme",
-  "keywords": ["react", "scroll", "scroll-lock", "disable-scroll"],
+  "keywords": [
+    "react",
+    "scroll",
+    "scroll-lock",
+    "disable-scroll"
+  ],
   "dependencies": {
-    "exenv": "^1.2.2"
+    "exenv": "^1.2.2",
+    "react-prop-toggle": "^1.0.2"
   },
   "peer-dependencies": {
     "react": "^16.3.0"
