--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-scrolllock",
   "description": "Prevent scroll on the body when component is mounted.",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -14,9 +14,7 @@
     "publish:examples": "npm run build:examples && npm run deploy:examples"
   },
   "jest": {
-    "setupFiles": [
-      "<rootDir>/config/setupPolyfills.js"
-    ],
+    "setupFiles": ["<rootDir>/config/setupPolyfills.js"],
     "setupTestFrameworkScriptFile": "<rootDir>/config/setupFramework.js"
   },
   "repository": {
@@ -28,12 +26,7 @@
     "url": "https://github.com/jossmac/react-scrolllock/issues"
   },
   "homepage": "https://github.com/jossmac/react-scrolllock#readme",
-  "keywords": [
-    "react",
-    "scroll",
-    "scroll-lock",
-    "disable-scroll"
-  ],
+  "keywords": ["react", "scroll", "scroll-lock", "disable-scroll"],
   "dependencies": {
     "exenv": "^1.2.2",
     "react-prop-toggle": "^1.0.2"
