--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "publish:examples": "npm run build:examples && npm run deploy:examples"
   },
   "jest": {
-    "setupFiles": ["<rootDir>/config/setupPolyfills.js"],
+    "setupFiles": [
+      "<rootDir>/config/setupPolyfills.js"
+    ],
     "setupTestFrameworkScriptFile": "<rootDir>/config/setupFramework.js"
   },
   "repository": {
@@ -26,7 +28,12 @@
     "url": "https://github.com/jossmac/react-scrolllock/issues"
   },
   "homepage": "https://github.com/jossmac/react-scrolllock#readme",
-  "keywords": ["react", "scroll", "scroll-lock", "disable-scroll"],
+  "keywords": [
+    "react",
+    "scroll",
+    "scroll-lock",
+    "disable-scroll"
+  ],
   "dependencies": {
     "exenv": "^1.2.2",
     "react-prop-toggle": "^1.0.2"
@@ -48,6 +55,7 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "flow-bin": "^0.61.0",
     "gh-pages": "^1.1.0",
+    "glam": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
