update homepage ref

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "bugs": {
     "url": "https://github.com/jossmac/react-scrolllock/issues"
   },
-  "homepage": "https://github.com/jossmac/react-scrolllock#readme",
+  "homepage": "https://jossmac.github.io/react-scrolllock",
   "keywords": [
     "react",
     "scroll",
