--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "disable-scroll"
   ],
   "dependencies": {
-    "exenv": "^1.2.2",
-    "react-prop-toggle": "^1.0.2"
+    "exenv": "^1.2.2"
   },
   "peer-dependencies": {
     "react": "^16.3.0"
@@ -64,6 +63,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-lorem-component": "^0.12.2",
+    "react-prop-toggle": "^1.0.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
