--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "disable-scroll"
   ],
   "dependencies": {
-    "exenv": "^1.2.2",
-    "react-prop-toggle": "^1.0.2"
+    "exenv": "^1.2.2"
   },
   "peer-dependencies": {
     "react": "^16.3.0"
