--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "raf": "^3.4.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-prop-toggle": "^1.0.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
