--- a/package.json
+++ b/package.json
@@ -1,81 +1,50 @@
 {
-  "name": "react-scrolllock",
-  "description": "Prevent scroll on the body when component is mounted.",
-  "version": "5.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "license": "MIT",
+  "name": "react-scrolllock-repo",
+  "private": true,
+  "version": "1.0.0",
   "scripts": {
-    "test": "jest",
+    "format": "prettier --write \"**/*.js{,on}\" \"**/*.md\" && remark . --output",
     "lint": "eslint .",
-    "start": "webpack-dev-server --mode development",
-    "build": "babel src -d dist --copy-files",
-    "prepublishOnly": "npm run build",
-    "build:examples": "webpack --mode production",
-    "deploy:examples": "gh-pages -d examples/dist",
-    "publish:examples": "npm run build:examples && npm run deploy:examples",
-    "precommit": "flow check && lint-staged"
+    "start:website": "cd website && yarn start",
+    "postinstall": "manypkg check && preconstruct dev",
+    "test": "jest --verbose"
   },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/config/setupPolyfills.js"
-    ],
-    "setupTestFrameworkScriptFile": "<rootDir>/config/setupFramework.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jossmac/react-scrolllock.git"
-  },
-  "author": "Joss Mackison (https://github.com/jossmac)",
-  "bugs": {
-    "url": "https://github.com/jossmac/react-scrolllock/issues"
-  },
-  "homepage": "https://jossmac.github.io/react-scrolllock",
-  "keywords": [
-    "react",
-    "scroll",
-    "scroll-lock",
-    "disable-scroll"
-  ],
   "dependencies": {
-    "exenv": "^1.2.2"
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.7.7",
+    "@changesets/cli": "^2.4.0",
+    "@manypkg/cli": "^0.10.0",
+    "@preconstruct/cli": "^1.1.2",
+    "@types/react": "^16.9.4",
+    "@types/react-dom": "^16.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-emotion": "^10.0.14",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-import": "~2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5"
   },
-  "peerDependencies": {
-    "react": "^16.12.0"
-  },
-  "devDependencies": {
-    "@types/react": "^16.8.20",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^5.4.0",
-    "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "^0.61.0",
-    "gh-pages": "^1.1.0",
-    "glam": "^5.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^21.2.1",
-    "jest-cli": "^21.2.1",
-    "prop-types": "^15.6.0",
-    "raf": "^3.4.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-prop-toggle": "^1.0.2",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
-  },
-  "lint-staged": {
-    "*.js": "eslint"
+  "workspaces": [
+    "packages/*",
+    "website"
+  ],
+  "preconstruct": {
+    "packages": [
+      "packages/*"
+    ]
   }
 }
