attempt to get Next working

--- a/website/package.json
+++ b/website/package.json
@@ -9,11 +9,13 @@
     "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.3",
     "@emotion/core": "^10.0.27",
+    "@preconstruct/next": "^1.0.1",
     "next": "^9.2.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scrolllock": "^5.0.0"
+    "react-scrolllock": "^6.0.0"
   },
   "license": "ISC",
   "devDependencies": {
