--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^16.3.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.6.1",
     "@types/react": "^16.8.20",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
